--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "generate-docs": "sls generate-swagger",
     "test": "jest",
-    "deploy": "npm run test && sls deploy"
+    "deploy": "npm run test && sls deploy",
+    "fill-tables": "ts-node src/libs/fill-db-tables.ts"
   },
   "engines": {
     "node": ">=14.15.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.428.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
