--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,7 +13,8 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.428.0"
+    "@aws-sdk/client-dynamodb": "^3.428.0",
+    "@aws-sdk/lib-dynamodb": "^3.430.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
